--- a/win-project-2/win-project-2.csproj
+++ b/win-project-2/win-project-2.csproj
@@ -258,12 +258,10 @@
   <ItemGroup>
     <Compile Include="Data.cs" />
     <Compile Include="Firebase.cs" />
-    <Compile Include="Form1.cs">
+    <Compile Include="Forms\Form1.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="Form1.Designer.cs">
-      <DependentUpon>Form1.cs</DependentUpon>
-    </Compile>
+    <Compile Include="Forms\Form1.Designer.cs" />
     <Compile Include="GlobalVariables.cs" />
     <Compile Include="InforForm.cs">
       <SubType>Form</SubType>
@@ -277,12 +275,11 @@
     <Compile Include="LoginForm.Designer.cs">
       <DependentUpon>LoginForm.cs</DependentUpon>
     </Compile>
+    <Compile Include="PostInfo.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="UserInfo.cs" />
-    <EmbeddedResource Include="Form1.resx">
-      <DependentUpon>Form1.cs</DependentUpon>
-    </EmbeddedResource>
+    <EmbeddedResource Include="Forms\Form1.resx" />
     <EmbeddedResource Include="InforForm.resx">
       <DependentUpon>InforForm.cs</DependentUpon>
     </EmbeddedResource>
