--- a/win-project-2/packages.config
+++ b/win-project-2/packages.config
@@ -3,6 +3,7 @@
   <package id="FirebaseAuthentication.net" version="3.7.1" targetFramework="net48" />
   <package id="FirebaseStorage.net" version="1.0.3" targetFramework="net48" />
   <package id="FireSharp" version="2.0.4" targetFramework="net48" />
+  <package id="FontAwesome.Sharp" version="6.3.0" targetFramework="net48" />
   <package id="Google.Api.Gax" version="3.2.0" targetFramework="net48" />
   <package id="Google.Api.Gax.Rest" version="3.2.0" targetFramework="net48" />
   <package id="Google.Apis" version="1.49.0" targetFramework="net48" />
