--- a/win-project-2/win-project-2.csproj
+++ b/win-project-2/win-project-2.csproj
@@ -263,8 +263,10 @@
     <Reference Include="WindowsBase" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Data.cs" />
-    <Compile Include="Firebase.cs" />
+    <Compile Include="DataClass\Data.cs" />
+    <Compile Include="DataClass\Firebase.cs" />
+    <Compile Include="DataClass\NguoiTimTho.cs" />
+    <Compile Include="DataClass\Post.cs" />
     <Compile Include="Forms\FChat.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -295,7 +297,7 @@
     <Compile Include="Forms\NhanVienView.Designer.cs">
       <DependentUpon>NhanVienView.cs</DependentUpon>
     </Compile>
-    <Compile Include="GlobalVariables.cs" />
+    <Compile Include="DataClass\GlobalVariables.cs" />
     <Compile Include="Forms\FInfor.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -308,27 +310,27 @@
     <Compile Include="Forms\LoginForm.Designer.cs">
       <DependentUpon>LoginForm.cs</DependentUpon>
     </Compile>
-    <Compile Include="PostInfo.cs" />
-    <Compile Include="Program.cs" />
+    <Compile Include="DataClass\NguoiTho.cs" />
+    <Compile Include="Program\Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Properties\Resources.Designer.cs">
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
       <DependentUpon>Resources.resx</DependentUpon>
     </Compile>
-    <Compile Include="UCNhanvien.cs">
+    <Compile Include="UserControls\UCNhanvien.cs">
       <SubType>UserControl</SubType>
     </Compile>
-    <Compile Include="UCNhanvien.Designer.cs">
+    <Compile Include="UserControls\UCNhanvien.Designer.cs">
       <DependentUpon>UCNhanvien.cs</DependentUpon>
     </Compile>
-    <Compile Include="UCNhanVien2.cs">
+    <Compile Include="UserControls\UCNhanVien2.cs">
       <SubType>UserControl</SubType>
     </Compile>
-    <Compile Include="UCNhanVien2.Designer.cs">
+    <Compile Include="UserControls\UCNhanVien2.Designer.cs">
       <DependentUpon>UCNhanVien2.cs</DependentUpon>
     </Compile>
-    <Compile Include="UserInfo.cs" />
+    <Compile Include="DataClass\UserInfo.cs" />
     <EmbeddedResource Include="Forms\FChat.resx">
       <DependentUpon>FChat.cs</DependentUpon>
     </EmbeddedResource>
@@ -355,13 +357,13 @@
       <SubType>Designer</SubType>
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
     </EmbeddedResource>
-    <EmbeddedResource Include="UCNhanvien.resx">
+    <EmbeddedResource Include="UserControls\UCNhanvien.resx">
       <DependentUpon>UCNhanvien.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="UCNhanVien2.resx">
+    <EmbeddedResource Include="UserControls\UCNhanVien2.resx">
       <DependentUpon>UCNhanVien2.cs</DependentUpon>
     </EmbeddedResource>
-    <None Include="packages.config" />
+    <None Include="Program\packages.config" />
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
       <LastGenOutput>Settings.Designer.cs</LastGenOutput>
@@ -373,7 +375,7 @@
     </Compile>
   </ItemGroup>
   <ItemGroup>
-    <None Include="App.config" />
+    <None Include="Program\App.config" />
   </ItemGroup>
   <ItemGroup>
     <None Include="Resources\Logo Project AM.png" />
@@ -396,6 +398,7 @@
   <ItemGroup>
     <None Include="Resources\Image1.bmp" />
   </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="..\packages\Microsoft.Bcl.Build.1.0.14\tools\Microsoft.Bcl.Build.targets" Condition="Exists('..\packages\Microsoft.Bcl.Build.1.0.14\tools\Microsoft.Bcl.Build.targets')" />
   <Target Name="EnsureBclBuildImported" BeforeTargets="BeforeBuild" Condition="'$(BclBuildImported)' == ''">
