--- a/win-project-2/win-project-2.csproj
+++ b/win-project-2/win-project-2.csproj
@@ -291,6 +291,12 @@
     <Compile Include="Forms\FStatistic.Designer.cs">
       <DependentUpon>FStatistic.cs</DependentUpon>
     </Compile>
+    <Compile Include="Forms\FUserInfor.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Forms\FUserInfor.Designer.cs">
+      <DependentUpon>FUserInfor.cs</DependentUpon>
+    </Compile>
     <Compile Include="Forms\NhanVienView.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -345,6 +351,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Forms\FInfor.resx">
       <DependentUpon>FInfor.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Forms\FUserInfor.resx">
+      <DependentUpon>FUserInfor.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Forms\LoginForm.resx">
       <DependentUpon>LoginForm.cs</DependentUpon>
