--- a/win-project-2/win-project-2.csproj
+++ b/win-project-2/win-project-2.csproj
@@ -264,7 +264,14 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="DataClass\Data.cs" />
+    <Compile Include="DataClass\DB.cs" />
     <Compile Include="DataClass\Firebase.cs" />
+    <Compile Include="FormTest.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="FormTest.Designer.cs">
+      <DependentUpon>FormTest.cs</DependentUpon>
+    </Compile>
     <Compile Include="DataClass\NguoiTimTho.cs" />
     <Compile Include="DataClass\Post.cs" />
     <Compile Include="Forms\FChat.cs">
@@ -331,6 +338,9 @@
       <DependentUpon>UCNhanVien2.cs</DependentUpon>
     </Compile>
     <Compile Include="DataClass\UserInfo.cs" />
+    <EmbeddedResource Include="FormTest.resx">
+      <DependentUpon>FormTest.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Forms\FChat.resx">
       <DependentUpon>FChat.cs</DependentUpon>
     </EmbeddedResource>
