--- a/win-project-2/win-project-2.csproj
+++ b/win-project-2/win-project-2.csproj
@@ -266,6 +266,30 @@
     <Compile Include="DataClass\Data.cs" />
     <Compile Include="DataClass\DB.cs" />
     <Compile Include="DataClass\Firebase.cs" />
+    <Compile Include="Forms\FPostEmloyee.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Forms\FPostEmloyee.Designer.cs">
+      <DependentUpon>FPostEmloyee.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Forms\FRating.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Forms\FRating.Designer.cs">
+      <DependentUpon>FRating.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Forms\FShowPostEmloyee.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Forms\FShowPostEmloyee.Designer.cs">
+      <DependentUpon>FShowPostEmloyee.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Forms\FShowRating.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Forms\FShowRating.Designer.cs">
+      <DependentUpon>FShowRating.cs</DependentUpon>
+    </Compile>
     <Compile Include="FormTest.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -344,6 +368,24 @@
       <DependentUpon>UCNhanVien2.cs</DependentUpon>
     </Compile>
     <Compile Include="DataClass\UserInfo.cs" />
+    <Compile Include="UserControls\UCRating.cs">
+      <SubType>UserControl</SubType>
+    </Compile>
+    <Compile Include="UserControls\UCRating.Designer.cs">
+      <DependentUpon>UCRating.cs</DependentUpon>
+    </Compile>
+    <EmbeddedResource Include="Forms\FPostEmloyee.resx">
+      <DependentUpon>FPostEmloyee.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Forms\FRating.resx">
+      <DependentUpon>FRating.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Forms\FShowPostEmloyee.resx">
+      <DependentUpon>FShowPostEmloyee.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Forms\FShowRating.resx">
+      <DependentUpon>FShowRating.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="FormTest.resx">
       <DependentUpon>FormTest.cs</DependentUpon>
     </EmbeddedResource>
@@ -382,6 +424,9 @@
     <EmbeddedResource Include="UserControls\UCNhanVien2.resx">
       <DependentUpon>UCNhanVien2.cs</DependentUpon>
     </EmbeddedResource>
+    <EmbeddedResource Include="UserControls\UCRating.resx">
+      <DependentUpon>UCRating.cs</DependentUpon>
+    </EmbeddedResource>
     <None Include="Program\packages.config" />
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
@@ -417,7 +462,27 @@
   <ItemGroup>
     <None Include="Resources\Image1.bmp" />
   </ItemGroup>
-  <ItemGroup />
+  <ItemGroup>
+    <None Include="Resources\user.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\telephone.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\suitcase.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\location.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\pencil.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\dollar.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\presentation.png" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="..\packages\Microsoft.Bcl.Build.1.0.14\tools\Microsoft.Bcl.Build.targets" Condition="Exists('..\packages\Microsoft.Bcl.Build.1.0.14\tools\Microsoft.Bcl.Build.targets')" />
   <Target Name="EnsureBclBuildImported" BeforeTargets="BeforeBuild" Condition="'$(BclBuildImported)' == ''">
