--- a/win-project-2/win-project-2.csproj
+++ b/win-project-2/win-project-2.csproj
@@ -273,6 +273,12 @@
     <Compile Include="Forms\FDetail1.Designer.cs">
       <DependentUpon>FDetail1.cs</DependentUpon>
     </Compile>
+    <Compile Include="Forms\FListNguoiTho.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Forms\FListNguoiTho.Designer.cs">
+      <DependentUpon>FListNguoiTho.cs</DependentUpon>
+    </Compile>
     <Compile Include="Forms\FListReview.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -407,6 +413,9 @@
     </Compile>
     <EmbeddedResource Include="Forms\FDetail1.resx">
       <DependentUpon>FDetail1.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Forms\FListNguoiTho.resx">
+      <DependentUpon>FListNguoiTho.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Forms\FListReview.resx">
       <DependentUpon>FListReview.cs</DependentUpon>
